--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -49,7 +49,7 @@
 }
 body {
     background-color: #e8e8e8;
-    font-family: 'SourceSansPro', Arial, sans-serif;
+    font-family: 'SourceSansPro', Arial, sans-serif!important;
     font-weight: 300;
     font-size: 16px;
     color: #494949;
@@ -75,7 +75,7 @@ header .container .row {position: relative;min-height: 65px;}
     text-align: center;
     padding: 10px 0;
 }
-.font {font-size: 230%;color: #fff;font-weight: 100;}
+.font {font-size: 170%;color: #fff;}
 .font-active {color: #01aef0!important;border-color: #01aef0!important;}
 .font-active > i.font {color: #01aef0!important;}
 
