--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -298,7 +298,7 @@ hr.divider {
 .contactus > .row h3 {margin-top: 15px;}
 .contactus > .row > .col-md-6 input, .contactus > .row > .col-md-6 textarea, .contactus > .row > .col-md-6 select {margin: 0 0 8px;}
 .contactus > .row > .col-md-6 label {padding: 10px 0 8px;margin: 0;}
-.contactus .row .col-md-6 .row .col-md-6 {vertical-align: top;}
+.contactus .row .col-md-6 .row .col-md-6 {vertical-align: top;width: 49%;height: 280px;}
 
 /*============================== CANDIDATURAS ===================================*/
 
@@ -378,6 +378,7 @@ hr.divider {
     .related .img-responsive {width:125px;height: 120px;}
 
     .contactus .row .col-md-6 .row .col-md-6 {width: 49%;display: inline-block;}
+    #date {text-align: left;margin-bottom: -25px;}
 
 }
 @media (max-width: 800px) {
