--- a/assets/sosoares/css/styles-extrusao.css
+++ b/assets/sosoares/css/styles-extrusao.css
@@ -15,6 +15,8 @@ nav .navbar-nav li:hover, .navbar-default .navbar-nav > .open > a, .navbar-defau
 .title1, .title2, .title3, .title4 {color: #797979}
 .carousel-indicators li {background-color: #454545;}
 
+.panel-default > .panel-heading {background-color: #909090;}
+
 @media screen and (max-width: 768px) {
     nav li {background-color: #797979!important;}
 }
