--- a/assets/sosoares/css/styles-tratamento.css
+++ b/assets/sosoares/css/styles-tratamento.css
@@ -14,6 +14,8 @@ nav .navbar-nav li:hover, .navbar-default .navbar-nav > .open > a, .navbar-defau
 .title1, .title2, .title3, .title4 {color: #797979}
 .carousel-indicators li {background-color: #454545;}
 
+.panel-default > .panel-heading {background-color: #484848;}
+
 @media screen and (max-width: 768px) {
     nav li {background-color: #585858!important;}
 }
