--- a/assets/sosoares/css/bootstrap.css
+++ b/assets/sosoares/css/bootstrap.css
@@ -5147,7 +5147,7 @@ button.close {
 .modal-header {
   min-height: 16.42857143px;
   padding: 15px;
-  border-bottom: 1px solid #e5e5e5;
+  /*border-bottom: 1px solid #e5e5e5;*/
 }
 .modal-header .close {
   margin-top: -2px;
@@ -5162,7 +5162,7 @@ button.close {
 }
 .modal-footer {
   padding: 19px 20px 20px;
-  margin-top: 15px;
+  /*margin-top: 15px;*/
   text-align: right;
   border-top: 1px solid #e5e5e5;
 }
