--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -142,6 +142,16 @@ nav .navbar-nav li:hover, .navbar-default .navbar-nav > .open > a, .navbar-defau
 .li-b {color: #003049;font-size: 12px;font-weight: normal!important;display: block;margin-bottom: 10px;}
 .curr {background-color: #076e93;}
 
+/*============================== HOME =======================================*/
+.lang {
+    padding-right: 5px;
+}
+
+/*============================== FOOTER =======================================*/
+.footer {
+    margin: 0 0 0 0;
+}
+
 /*============================== SLIDER HOME =======================================*/
 .carousel-caption {
     background-color: rgba(0, 0, 0, 0.3);
