--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -103,7 +103,7 @@ footer > .container > .row:first-child > .col-md-3 {position: absolute;top: -5px
 }
 .title1 {font-weight: 100!important;}
 .title2 {font-size: 18px;}
-.title3 {font-size: 36px;font-weight: 100!important;}
+.title3 {font-size: 36px;font-weight: 100!important;padding-left: 15px;}
 .title4 {font-size: 22px;font-weight: 100!important;}
 .breadcrumb {background-color: #e8e8e8;margin-top: 15px;}
 
@@ -233,6 +233,8 @@ nav .navbar-nav li:hover, .navbar-default .navbar-nav > .open > a, .navbar-defau
 .icon-tras{font-size: 33px;padding-top: 14px;padding-right: 30px;}
 .icon-frente{font-size: 33px;padding-top: 14px;}
 
+/*============================== PRODUTOS =======================================*/
+div.produtos-container {padding: 0 7px !important;}
 
 /*============================== OBRAS =======================================*/
 div.obras-container a {width: 256px;height: 230px;display:inline-block;float: left;margin: 12px;position: relative;box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;}
@@ -251,7 +253,7 @@ div.obras-container a {width: 256px;height: 230px;display:inline-block;float: le
     border-radius: 0 0 10px 10px;
     padding: 2px 15px;
 }
-div.obras-container {display: inline-block;padding: 0 10px;margin: 0 auto;position: relative;}
+div.obras-container {display: inline-block;margin: 0 auto;position: relative;}
 
 /*============================== MAPS ===================================*/
 #map-canvas {width: 100%;height: 380px;display: block;}
@@ -279,6 +281,7 @@ hr.divider {border: 0 !important;margin: -10px 0 40px !important;}
 .divider {border: 0;margin: -10px 0 40px;}
 
 /* ============================== NOTICIAS =================================== */
+.noticias {padding-left: 16px;}
 .noticias ul {list-style: none;}
 .noticias ul li {max-height: 220px;overflow: hidden;border-bottom: 1px solid #ccc;padding: 25px 0;}
 .noticias ul li:last-child {border: 0;}
