--- a/assets/sosoares/styles_fonts.css
+++ b/assets/sosoares/styles_fonts.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'sosoares_site';
-    src:url('fonts/sosoares_site.eot?-np0eb6');
-    src:url('fonts/sosoares_site.eot?#iefix-np0eb6') format('embedded-opentype'),
-    url('fonts/sosoares_site.woff?-np0eb6') format('woff'),
-    url('fonts/sosoares_site.ttf?-np0eb6') format('truetype'),
-    url('fonts/sosoares_site.svg?-np0eb6#sosoares_site') format('svg');
+    src:url('fonts/sosoares_site.eot?-a0k8hr');
+    src:url('fonts/sosoares_site.eot?#iefix-a0k8hr') format('embedded-opentype'),
+        url('fonts/sosoares_site.woff?-a0k8hr') format('woff'),
+        url('fonts/sosoares_site.ttf?-a0k8hr') format('truetype'),
+        url('fonts/sosoares_site.svg?-a0k8hr#sosoares_site') format('svg');
     font-weight: normal;
     font-style: normal;
 }
