--- a/assets/sosoares/css/generic-styles.css
+++ b/assets/sosoares/css/generic-styles.css
@@ -42,9 +42,6 @@
 .menu-h3>a {color: #fff !important;}
 
 /*============================= BODY ==============================================*/
-*, div {
-    -webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;
-}
 body {
     background-color: #e8e8e8;
     font-family: 'SourceSansPro', Arial, sans-serif!important;
@@ -67,18 +64,21 @@ header .container .row {position: relative;min-height: 65px;}
     width: 52px;
     height: 52px;
     display: inline-block;
+    vertical-align: top;
 }
 .font {font-size: 320%;color: #fff;}
 .font-active {color: #01aef0!important;border-color: #01aef0!important;}
 .font-active > i.font {color: #01aef0!important;}
 
-.form {width: 175px;display: inline-block;position: absolute;bottom: 0;right: 130px;}
-.form #search, .form #searchButton {background-color: #054667;display: inline-block;height: 34px;width: 86%;padding: 10px;color: #fff;border-radius: 5px;border: 1px solid #107ca4;}
-.form #searchButton {background-color: #107ca4;box-shadow: 0 3px 0 #05698e;height: 31px;width: 20%;border: 0;font-size: 18px;padding: 5px;margin: -3px 0 0 -15px;}
+.form {width: 175px;display: inline-block;position: absolute;top: 37px;right: 0;}
+.form #search, .form #searchButton {background-color: transparent;display: inline-block;height: 34px;width: 100%;padding: 10px;color: #fff;border-radius: 5px;border: 1px solid #107ca4;}
+.form #searchButton {height: 31px;width: 31px;border: 0;font-size: 18px;padding: 5px;margin: 0;position: absolute;top: 2px;right: 2px;color: #03a1dc;}
+.form #search::-webkit-input-placeholder {color: #00aeef;}
+
 .button {background-color: #107ca4;box-shadow: 0 3px 0 #05698e;color: #fff;border: 0;font-size: 16px;width: 107px;height: 31px;}
 #bd, #signIn {display: inline-block;position: absolute; right: 0;margin: 0; top:0;}
-#bd img {margin: 0 0 0 3px;top:0}
-#signIn {bottom: 3px; top: initial;}
+#bd img {margin: 0 0 0 15px;top:0}
+#signIn {top: 95px;z-index: 1003;}
 
 footer {margin-top: 0 !important;padding: 25px 0 15px;background-color: #f0f0f0;width: 100%;font-size: 14px;}
 footer b {font-weight: 700!important;font-size: 12px;}
@@ -125,7 +125,7 @@ nav a:hover {color: #fff;}
 
 nav .navbar-nav li:hover, .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {background-color: #107ca4;}
-.navbar-collapse {max-width: 1170px;margin: 0 auto;}
+.navbar-collapse {max-width: 1170px;margin: 0 auto;padding: 0;}
 
 .grid-demo .row [class*="col-"] {background-color: transparent;border: 0;color: #fff;}
 .grid-demo .row .row [class*="col-"] {border-left: 1px solid #16627e;padding-bottom: 10px;}
@@ -305,6 +305,7 @@ hr.divider {border: 0 !important;margin: -10px 0 40px !important;}
 
 /*============================== MEDIA QUERIES ===================================*/
 @media (max-width: 1190px) {
+    * {-webkit-transition: all 300ms linear;-moz-transition: all 300ms linear;-o-transition: all 300ms linear;-ms-transition: all 300ms linear;transition: all 300ms linear;}
     .carousel-caption li .slider-h1 {font-size: 25px;max-width: 500px;}
     .title1 {margin: 20px 20px 10px;}
     .col-md-4 .title1 {margin: 20px 0 10px;}
@@ -318,7 +319,12 @@ hr.divider {border: 0 !important;margin: -10px 0 40px !important;}
     div.obras-container {text-align: center;}
 }
 
+@media screen and (max-width: 1070px) {
+    header .pages-img img {height: 45px;}
+}
+
 @media (max-width: 991px) {
+    header .pages-img img {display: none;}
     section > .container > .row .col-md-8 {display: inline-block;width: 100%;vertical-align: top;}
     section > .container > .row .col-md-4 {display: inline-block;width: 40%;vertical-align: top;}
 
@@ -346,6 +352,7 @@ hr.divider {border: 0 !important;margin: -10px 0 40px !important;}
 @media (max-width: 800px) {
     header {height: 140px;}
     header .row .pages-img {top: 50px;left: -10px;}
+    header #signIn {top: 81px;}
     .navbar-nav > li > a {font-size: 14px;padding: 15px 5px;}
 
     .carousel-caption {width: 90%;}
@@ -414,8 +421,8 @@ hr.divider {border: 0 !important;margin: -10px 0 40px !important;}
     header .logotipo, header .logotipo h1 {width: 150px;}
 
     header .row .pages-img {top: 45px;}
-    .pages-img a {margin: 0;width: 40px;height: 40px;padding: 5px 0;}
-    .font {font-size: 185%}
+    .pages-img a {margin: 0;width: 40px;height: 40px;padding: 0;}
+    .font {font-size: 240%}
 
     header .form {width: 100%;display: block;top: 100px;left: 0!important;}
     head .form {position: relative}
