--- a/assets/sosoares/css/tabs.css
+++ b/assets/sosoares/css/tabs.css
@@ -1,7 +1,7 @@
 .tabs {
     position: relative;
-    margin: 40px auto;
-    width: 750px;
+    /*margin: 40px auto;*/
+    /*width: 750px;*/
 }
 
 .tabs input {
@@ -77,7 +77,7 @@
 .tab-content {
     background: #fff;
     position: relative;
-    width: 60%;
+    /*width: 60%;*/
     z-index: 5;
     box-shadow: 0 -2px 3px -2px rgba(0,0,0,0.2), 0 2px 2px rgba(0,0,0,0.1);
     border-radius: 0 3px 3px 3px;
